# shmenu

./: Cargo.toml  default.nix
src/: bash_completer.rs  history_completer.rs  main.rs
