[package]
name = "shmenu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xkbcommon = { version = "0.5", features = ["x11"] }
x11rb = { version = "0.13", features = ["allow-unsafe-code", "xkb"] }
xcb = "1.1"
x11rb-protocol = "0.13.0"
exec = "0.3.1"
home = "0.5.9"
